fixed top and bottom

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-  <div class="container-fluid"></div>
+  <div class="app-body"></div>
 </body>
 <script src="/bundle.js"></script>
 
